--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "basic-ftp": "^2.13.2",
     "date-and-time": "^0.6.2",
     "electron": "^2.0.8"
+  },
+  "devDependencies": {
+    "electron-builder": "^20.31.2"
   }
 }
