--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "basic-ftp": "^2.13.2",
-    "date-and-time": "^0.6.2",
-    "electron": "^2.0.8",
+    "basic-ftp": "^2.17.0",
+    "date-and-time": "^0.6.3",
+    "electron": "^3.0.13",
     "is-windows": "^1.0.2",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "os": "^0.1.1"
   },
   "devDependencies": {
-    "electron-builder": "^20.31.2"
+    "electron-builder": "^20.38.4"
   }
 }
