--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "electron": "^3.0.13",
     "is-windows": "^1.0.2",
     "jquery": "^3.3.1",
-    "os": "^0.1.1"
+    "os": "^0.1.1",
+    "promise-ftp": "^1.3.5"
   },
   "devDependencies": {
     "electron-builder": "^20.38.4"
